--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,15 @@
 
-<ul class="wikiMenu">
-  {% for p in site.pages %}
-    {% if p.menu == "wiki" %}
-    <li><a class="post-link" href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
-    {% endif %}
-  {% endfor %}
-</ul>
+<div class="sidebar">
+<p style="padding-bottom:5px;">More from OpIngsoc:</p>
+
+<a href="/research/operation_ingsoc.html">Operation Ingsoc</a>
+
+<a href="/research/propaganda_info_ops.html">Propaganda &amp; Info Ops</a>
+
+<a href="/research/dyncorp_trafficking.html">DynCorp, Capitalism &amp; Child Sex Slave Trafficking</a>
+
+<a href="/research/third_red_scare.html">The Third Red Scare</a>
 
 
+
+</div>
