--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -1,75 +1,98 @@
-<!DOCTYPE html>
-          <html><html lang="en">
-            <head>
+<!doctype html>
+<html lang="en">
+<head>
+  <title>{{ page.title }}</title>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' opingsoc.com; script-src 'self' 'unsafe-inline' code.jquery.com github.com/opingsoc opingsoc.com; img-src 'self' opingsoc.weebly.com opingsoc.com;">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
     <script type="text/javascript">
-    var host = "opingsoc.com";
-    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        var host = "opingsoc.com";
+        if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
     </script>
-              <meta content="text/html; charset=utf-8" http-equiv="content-type">
-
-          </head>
-            <body>
- 		      <link rel="preload" href="/assets/images/button-normal-720-480.png" as="image">
-    <link rel="preload" href="/assets/images/button-hover-720-480.png" as="image">
-    <link rel="preload" href="/assets/images/button-disabled-720-480.png" as="image">
+    {% capture lchar %}{{page.url | slice: -1, 1}}{% endcapture %}
+    {% capture url %}{% if lchar == "/" %}{{page.url}}index.html{% else %}{{ page.url | default: 'index.html' }}{% endif %}{% endcapture %}
+    <!-- load jQuery 3.2.1 -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous">
+    </script>
+  <!-- load jQuery 1.6.2 -->
+    <script
+			  src="https://code.jquery.com/jquery-1.6.2.min.js"
+			  integrity="sha256-0W0HoDU0BfzslffvxQomIbx0Jfml6IlQeDlvsNxGDE8="
+			  crossorigin="anonymous">
+    </script>
+    <script type="text/javascript">
+      var jQuery_1_6_2 = $.noConflict(true);
+    </script>
+    <link rel="stylesheet" href="{{ '/assets/css/style-splash.css?v=' | append: site.github.build_revision | relative_url }}" title="style-splash">
+    <script type="text/javascript">
+        window.onload = function() {
+        if(/iP(hone|ad)/.test(window.navigator.userAgent)) {
+        var elements = document.querySelectorAll('button');
+        var emptyFunction = function() {};
+        for(var i = 0; i < elements.length; i++) {
+        elements[i].addEventListener('touchstart', emptyFunction, false);
+          }
+        }
+      };
+    </script>
+</head>
+<body ondragstart="return false;" ondrop="return false;">
     <link rel="preload" href="/assets/images/button-normal.png" as="image">
     <link rel="preload" href="/assets/images/button-hover.png" as="image">
-    <link rel="preload" href="/assets/images/button-disabled.png" as="image">
-              {% capture lchar %}{{page.url | slice: -1, 1}}{% endcapture %}
-              {% capture url %}{% if lchar == "/" %}{{page.url}}index.html{%
-              else %}{{ page.url | default: 'index.html' }}{% endif %}{%
-              endcapture %}
-              <meta http-equiv="X-UA-Compatible" content="chrome=1">
-              <title>{{ page.title }}</title>
-              <script src="https://code.jquery.com/jquery-3.2.1.min.js" 
-	         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-                 crossorigin="anonymous"></script>
-
-              <link rel="stylesheet" href="{{ '/assets/css/style-splash.css?v=' | append: site.github.build_revision | relative_url }}" title="default">
-              
-              <meta name="viewport" content="width=device-width">
-
-<div class="dropdown">
-<button class="dropbtn">Menu</button>
-  <div class="dropdown-content">
-  {% for p in site.pages %}
-    {% if p.menu == "wiki" %}
-    <a href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
-    {% endif %}
-  {% endfor %}
-</div>
-</div>
-
-
-              <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>    <![endif]-->
-              <section>
-       <div class="search-div">
-          {{page.relative_path}}
-            <span class="tools-element1"><a href="/wiki/Home.html">Home</a></span>
-            <span class="tools-element2"><a href="">Research</a></span>
-            <span class="tools-element3"><a href="">Wiki</a></span>
-            <span class="tools-element4"><a href="">News</a></span>
-     
-	<form action="https://opingsoc.github.io/search.html">
- 	  <input type="text" class="search-box" id="search-query" name="q" placeholder="Search" autocomplete="off">
- 	  <input type="submit" class="search-button" value="Search" />
-        </form>
+    <link rel="preload" href="/assets/images/button-hover-red.png" as="image">
+    <link rel="preload" href="/assets/images/button-menu-long-white.png" as="image">
+    <link rel="preload" href="/assets/images/button-white-normal.png" as="image">
+    <link rel="preload" href="/assets/images/overlay.png" as="image">
+    <div id="nav">
+    <ul> 
+      <li><a href="#">Home</a>
+        <ul> 
+          <li><a href="/index.html">Home Page</a></li> 
+        </ul>
+      </li>
+      <li><a href="#">Research</a> 
+        <ul> 
+          <li>{% for p in site.pages %}
+              {% if p.menu == "research" %}
+              <a href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
+              {% endif %}
+              {% endfor %}</li> 
+        </ul> 
+      </li> 
+      <li><a href="#">Wiki</a> 
+        <ul> 
+          <li>{% for p in site.pages %}
+              {% if p.menu == "wiki" %}
+              <a href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
+              {% endif %}
+              {% endfor %}</li> 
+        </ul> 
+      </li>
+      <li><a href="#">News</a> 
+      </li> 
+    </ul> 
+    </div>
+    <br>
+    <div class="search-div">
+      <form action="https://opingsoc.github.io/search.html">
+        <input type="text" class="search-box" id="search-query" name="q" placeholder="Search" autocomplete="off">
+        <input type="submit" class="search-button" value="Search" />
+      </form>
+    </div>
+    <div class="container">
+      <div class="content-wrap">
+        <div class="logo-splash">
+          <a href="wiki/Home.html"> <img src="assets/images/webhome3.png" alt="opingsoc-logo" style="width:auto;max-width:100%"></a>
+        </div>
       </div>
-      
-
-<div class="container">
-        <div class="content-wrap">
-           <div class="logo-splash">
-                <a href="wiki/Home.html"> <img src="assets/images/webhome3.png"
-alt="opingsoc-logo" style="width:auto;max-width:100%"> </a>
-              </div>
-            </div>
-          </div>
-        
-      
-      <!-- end container -->
-  
-
-</section></body></html>
+    </div>
+    <script src="https://opingsoc.com/assets/js/scale.fix.js" integrity="sha384-1kXXzJdU0RhTpy4AR2pS7GDjVe5snWlRMZFB4ZHuQYTmIcj54r2v91UA5OemXJFp" crossorigin="anonymous"></script>
+</body>
+</html>
