--- a/_sass/style-splash.scss
+++ b/_sass/style-splash.scss
@@ -1,392 +1,493 @@
 @import "fonts";
 @import "rouge-github";
 
+/* CSS Browser Reset */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, 
+tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, 
+output, ruby, section, summary, time, mark, audio, video {margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;outline:0; -webkit-tap-highlight-color:transparent;}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;outline:0;-webkit-tap-highlight-color: transparent;}
+body {line-height: 1;}
+ol, ul {list-style: none;}
+blockquote, q {quotes: none;}
+blockquote:before, blockquote:after,
+q:before, q:after {content: '';content: none;}
+table {border-collapse: collapse;border-spacing: 0;}
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {border:none;
+}
+/* end reset */
+
 body {
   background-color:#000000;
-  padding:15px;
-  font: 15px/1.5 "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#a4a4a4;
-  font-weight:500;
-  letter-spacing: 0.20px;
+  font-family:"Proxima Nova", "Open Sans","Verdana", Helvetica, Verdana, sans-serif;
+  font-weight:400;
+  color:#9e9c9c;
+  font-size:16.5px;
+  line-height:1.75;
+  letter-spacing:normal;
+  overflow-wrap:break-word;
+  word-wrap:break-word;
+  -webkit-font-smoothing:antialiased;
+  -moz-font-smoothing:antialiased;
+  -o-font-smoothing:antialiased;
+}
+
+.logo-splash {
+  padding-top:120px;
+  padding-bottom:10px;
+  margin-left:0px;
+  margin-right:0px;
+  text-align:center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family:"Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight:bold;
+}
+
+h1 {
+  font-size:24px;
+  color:#870707;
+  margin:50px 0 30px 0;
+  max-width:98%;
+  line-height:1.5;
+}
+
+h2 {
+  color:#870707;
+  font-size:20px;
+  margin:40px 0 15px 0;
+  max-width:98%;
+}
+
+h3 {
+  color:#999999;
+  text-decoration:underline;
+  margin:40px 0 15px 0;
+}
+
+h4 {
+  color:#404040;
+  margin:0 0 5px 0;
+}
+
+h5 {
+  color:#333333;
+  margin:0 0 5px 0;
+}
+
+h6 {
+  color:#595959;
+  font-size:12px;
+  margin:0 0 5px 0;
+}
+
+.container {
+  margin:0 auto;
+  text-align:center;
+}
+
+table, pre, dl {
+  margin:0 0 20px 0;
+}
+
+p {
+  margin:0 0 20px 0;
+  padding:0;
+  max-width:1100px;
+}
+
+.container {
+  margin:0 auto;
+  text-align:center;
+}
+
+/* navigation bar - dropdown menu */
+
+#nav {
+  background:url(/assets/images/button-menu-long.png) 0 0 transparent;
+  background-position:center;
+  border:1px solid #1a1a1a;
+  float:left;
+  font-family:Arial, Helvetica, Verdana, sans-serif;
+  font-weight:bold;
+  overflow:hidden;
+  margin:0;
+  padding:0;
+  width:100%;
+  top:0px;
+  letter-spacing:0.5px;
+}
+
+#nav a {
+  font-size:12.5px;
+}
+
+#nav li {
+  margin:0;
+  padding:0;
+}
+
+#nav ul {
+  list-style:outside none none;
+  margin:0 auto;
+  padding:0;
+  width:321px;
+}
+
+#nav ul li {
+  float:left;
+}
+
+#nav ul li a, #nav ul li a:focus {
+  background:url(/assets/images/button-active.png) 0 0 transparent;
+  background-position:center;
+  border-left:1px solid rgba(0, 0, 0, 0.3);
+  border-right:1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.1), inset 0 0 5px 0 rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.1), inset 0 0 5px 0 rgba(0,0,0,0.1);
+  color:#a6a6a6;
+  float:left;
+  padding:8px 20px;
+}
+
+#nav ul li a:hover, #nav ul li:hover > a {
+  background:url(/assets/images/button-menu-long-hover.png) 0 0 transparent;
+  color:#ffffff;
+}
+
+#nav li ul a:hover, #nav ul li li:hover > a {
+  background-color:#8f0000; /* fallback */
+  background:rgba(0, 0, 0, 0) -moz-linear-gradient(center bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
+  background:rgba(0, 0, 0, 0) -webkit-linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
+	background:rgba(0, 0, 0, 0) -o-linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
+  background:rgba(0, 0, 0, 0) linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
+  border-bottom:1px solid rgba(0, 0, 0, 0.6);
+  border-top:1px solid rgba(0, 0, 0, 0.6);
+  color:#ffffff;
+}
+
+#nav li ul {
+  background-color:#969d9d;  /* fallback */
+  background:rgb(60, 64, 66) -moz-linear-gradient(center bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
+  background:rgb(60, 64, 66) -webkit-linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
+	background:rgb(60, 64, 66) -o-linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
+  background:rgb(60, 64, 66) linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
+  border:1px solid rgba(0, 0, 0, 0.5);
+  border-radius:0 0 10px 10px;
+  -webkit-border-radius:0 0 10px 10px;
+  box-shadow: inset 0 0 15px 0 rgba(0,0,0,0.4);
+  -webkit-box-shadow: inset 0 0 15px 0 rgba(0,0,0,0.4);
+  left:-999em;
+  margin:31px 0 0 0;
+  position:absolute;
+  width:250px;
+  z-index:9998;
+  opacity:0.90;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  filter: alpha(opacity=90);
+  -moz-opacity:0.90;
+}
+
+#nav li ul li ul {
+  z-index:9999;
+  opacity:0.95;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=95)";
+  filter: alpha(opacity=95);
+  -moz-opacity:0.95;
+}
+
+#nav li:hover ul {
+  left:auto;
+}
+
+#nav li ul a {
+  background:rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border-color:transparent currentColor;
+  border-image:none;
+  border-style:none;
+  border-width:1px;
+  box-shadow:none;
+  margin-right:0;
+  width:210px;
+}
+
+#nav li li ul {
+  border-radius:0 10px 10px 10px;
+  -webkit-border-radius:0 10px 10px 10px;
+  margin:-1px 0 0 120px;
+  visibility:hidden;
+}
+
+#nav li li:hover ul {
+  visibility:visible;
+}
+
+#nav ul ul li:last-child > a {
+  border-radius:0 0 10px 10px;
+  -webkit-border-radius:0 0 10px 10px;
+}
+
+#nav ul li ul li:last-child > a {
+  border-radius:0 0 10px 10px;
+  -webkit-border-radius:0 0 10px 10px;
+}
+
+#nav ul li ul a:hover {
+  border-radius:0;
+  -webkit-border-radius:0;
+}
+
+#nav ul li ul a:last-child {
+  border-radius:0 0 10px 10px;
+  -webkit-border-radius:0 0 10px 10px;
+}
+
+#nav ul li ul a:first-child {
+  border-radius:0;
+  -webkit-border-radius:0;
+}
+
+#nav ul ul ul li:first-child > a {
+  border-radius:0 10px 0 0;
+  -webkit-border-radius:0 10px 0 0;
+}
+
+#nav ul li ul li > a, 
+#nav ul li ul > a {
+  color:#000000;
 }
 
 a {
   color:#871e1e;
   text-decoration:none;
-  font-weight:500;
-  outline: none;
+  font-weight:600;
+  outline:none;
+  font-size:14.5px;
 }
 
 a:hover {
   color:#5e5e5e;
 }
 
-.tools-element2, .tools-element3, .tools-element4 {
-    border-left: 2px solid #292929;
-    padding-left: 10px;
-    padding-right: 10px;
+small {
+  font-size:13.5px;
 }
 
-.tools-element1 {
-    padding-right: 10px;
+small a {
+  font-size:11.5px;
 }
 
-.tools-element1 a, .tools-element2 a, .tools-element3 a, .tools-element4 a {
-    font-weight: bold;
-    font-size: 14px;
-    color:#5f5f5f;
+a:hover small {
+  color:#999;
 }
 
-.tools-element1 a:hover, .tools-element2 a:hover, .tools-element3 a:hover, .tools-element4 a:hover {
-    color:#870707;
+code, pre {
+  font-family:"Bitstream Vera Sans Mono", "Lucida Console", Terminal, Consolas, "Liberation Mono", "DejaVu Sans Mono", "Courier New", monospace;
+  color:#333;
+  font-size:12px;
 }
 
-.preload {
-    display: none !important;
+pre {
+  padding:8px 15px;
+  background:#f8f8f8;
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  border:1px solid #e5e5e5;
+  overflow-x:auto;
 }
+
+table {
+  width:100%;
+  color:#8f8f8f;
+  border-collapse:collapse;
+}
+
+th, td {
+  text-align:left;
+  padding:5px 10px;
+  border-bottom:1px solid #e5e5e5;
+}
+
+dt {
+  color:#444;
+  font-weight:700;
+}
+
+th {
+  color:#444;
+}
+
+img {
+  max-width:100%;
+}
+
+li {
+  margin-bottom:10px;
+  letter-spacing:normal;
+  line-height:1.2;
+}
+
+strong {
+  font-weight:600;
+}
+
+/* search-box and button*/
 
 .search-div {
-    text-align: right;
-    padding-right: 35px;
-    padding-top: 5px;
+  text-align:right;
+  margin:30px 50px 0 270px;
+  max-width:1220px;
 }
 
 input.search-box[type="text"] {
-    width:190px;
-    background-color:#161616;
-    border: 1px solid #242424;
-    color:#4d4d4d;
-    height: 18px;
-    margin-top: 10px;
+  width:190px;
+  background-color:#161616;
+  border:1px solid #242424;
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  font-size:11.5px;
+  color:#4d4d4d;
+  height:20px;
+  margin:10px 0 0 0;
 }
 
 input.search-button[type="submit"] {
-  background: url(/assets/images/button-normal.png) 0 0 transparent;
-  border: medium none !important;
-  width: 68px;
-  height: 22px;
+  background:url(/assets/images/button-normal.png) no-repeat 0 0 transparent;
+  background-position:center;
+  font-family:Arial;
+  font-weight:bold;
+  font-size:12.5px;
+  text-decoration:none;
+  color:#949494;
+  border-top:1px solid #1a1a1a;
+  border-left:1px solid #1a1a1a;
+  border-right:1px solid #1a1a1a;
+  border-bottom:1px solid transparent;
+  border-radius:5px 5px 5px 5px;
+  -webkit-border-radius:5px 5px 5px 5px;
+  box-shadow:inset 0 0 7px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow:inset 0 0 7px rgba(0, 0, 0, 0.4);
+  width:75px;
+  height:25px;
+  -webkit-transition:all 0.3s ease-in-out;
+  -moz-transition:all 0.3s ease-in-out;
+  -ms-transition:all 0.3s ease-in-out;
+  -o-transition:all 0.3s ease-in-out;
+  transition:all 0.3s ease-in-out;
 }
 
 input.search-button:hover[type="submit"] {
-  background: url(/assets/images/button-hover.png) no-repeat 0 0 transparent;
-  border: medium none !important;
-  width: 68px;
-  height: 22px;
+  background:#8f0000;
+  background:url(/assets/images/button-hover-red.png) no-repeat 0 0 transparent;
+  color:#ffffff;
+  text-shadow:0 1px 0 rgba(255, 255, 255, 0.2), 0 -1px #000;
+  -webkit-text-shadow:0 1px 0 rgba(255, 255, 255, 0.2), 0 -1px #000;
+  border-top-color:#3b1412;
+  border-left-color:#3b1412;
+  border-right-color:#3b1412;
+  width:75px;
+  height:25px;
+  -webkit-tap-highlight-color:rgb(0, 0, 0);
 }
 
-input.search-button[type="submit"]:disabled, input.search-button:hover[type="submit"]:disabled {
-  background: url(/assets/images/button-disabled.png) 0 0 transparent;
-  border: medium none !important;
-  width: 68px;
-  height: 22px;
-}
-
-.search-button {
-   color:#8f8f8f;
-}
-
-.logo-splash {
-  padding-top: 120px;
-  padding-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  text-align: center;
-}
-
-.open-menu {
-  display:none;
-}
-
-.dropbtn {
-    background: url(/assets/images/button-normal.png) no-repeat 0 0 transparent;
-    width: 68px;
-    height: 22px;
-    border: none;
-    cursor: pointer;
-    color:#8f8f8f !important;
-}
-
-.dropdown {
-    position: absolute;
-    display:inline-block;
-    top:20px;
-    left:25px;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    white-space:nowrap;
-    background-color:#1a1a1a;
-    font-size: 13px;
-}
-
-.dropdown-content a {
-    color: #737373;
-    font-weight: bold;
-    text-decoration: none;
-    display: block;
-    padding: 1.5px 7px 0 7px;
-}
-
-.dropdown-content, .dropdown-content a {
-    font-size:13px !important;
-}
-
-.dropdown-content a:hover {
-	background-color: #4d0000;
-    color: #a6a6a6;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background: url(/assets/images/button-hover.png) no-repeat 0 0 transparent;
-}
-
-// remove dotted outline when selecting button
-button::-moz-focus-inner,
-input[type="reset"]::-moz-focus-inner,
-input[type="button"]::-moz-focus-inner,
-input[type="submit"]::-moz-focus-inner,
-input[type="file"] > input[type="button"]::-moz-focus-inner {
-    border: none;
-}
-
-
-// DIFFERENT BROWSER SIZES
-
-@media print, screen and (max-width: 980px) {
-
-   body {
-    padding: 0;
-    margin: 0;
-    word-wrap:break-word;
-  }
-
-  header {
-    padding:0;
-  }
-
-  header ul, header p.view {
-    position:static;
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
+/* Tablets, iPads (portrait) / Screen = 1024px */
+  @media print, screen and (max-width: 1024px) {
   
   .search-div {
-    text-align: right;
-    padding-right: 40px;
-    padding-top: 30px;
-}
-
-.logo-splash {
-  padding-top: 120px;
-  padding-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  text-align: center;
-  width: 100%;
- }
-
-.tools-element1 a, .tools-element2 a, .tools-element3 a, .tools-element4 a {
-    font-size: 12px;
-}
-
-.tools-element2, .tools-element3, .tools-element4 {
-    border-left: 2px solid #292929;
-    padding-left: 7px;
-    padding-right: 7px;
-}
-
-.tools-element1 {
-    padding-right: 5px;
-}
-
-.tools-element4 a {
-    margin-right:2px;
-}
-
-input.search-box[type="text"] {
-    width:145px;
-    background-color:#161616;
-    border: 1px solid #242424;
-    color:#4d4d4d;
-    height: 14px;
-    margin-top: 10px;
-    font-size: 11px;
-}
-
-input.search-button[type="submit"] {
-  background: url(/assets/images/button-normal-720-480.png) 0 0 transparent;
-  width: 55px;
-  height: 18px;
-  margin-right: 10px;
-}
-
-input.search-button:hover[type="submit"] {
-  background: url(/assets/images/button-hover-720-480.png) no-repeat 0 0 transparent;
-  width: 55px;
-  height: 18px;
-}
-
-input.search-button[type="submit"]:disabled, input.search-button:hover[type="submit"]:disabled {
-  background: url(/assets/images/button-disabled-720-480.png) 0 0 transparent;
-  width: 55px;
-  height: 18px;
-}
-
-.search-button {
-   font-size:10px;
-}
-
-
-}
-
-
-@media print, screen and (max-width: 720px) {
-  body {
-    padding: 0;
-    margin: 0;
-    word-wrap:break-word;
+    margin:20px 30px 0 270px;
   }
 
-  header {
-    padding:0;
+  input.search-box[type="text"] {
+    width:170px;
+    height:17.25px;
+    font-size:10.5px;
   }
 
-  header ul, header p.view {
-    position:static;
+  input.search-button[type="submit"] {
+    width:60px;
+    height:20px;
+    font-size:12px;
+    -webkit-tap-highlight-color:rgb(143, 0, 0);
   }
 
-  pre, code {
-    word-wrap:normal;
+  input.search-button:hover[type="submit"] {
+    width:60px;
+    height:20px;
+    font-size:12px;
+    -webkit-tap-highlight-color:rgb(0, 0, 0);
   }
-  
+}
+
+@media print, screen and (max-width: 800px) {
+	body {
+		  overflow-y:scroll;
+		  -webkit-overflow-scrolling: touch
+	}
+}
+
+/* Screen = 768px */
+@media print, screen and (max-width: 768px) {
+
   .search-div {
-    text-align: right;
+    display:none;
+  }
 }
 
-.tools-element1 a, .tools-element2 a, .tools-element3 a, .tools-element4 a {
-    font-size: 12px;
+@media print, screen and (max-width: 565px) {
+
+	#nav {
+    width:100%;
+    background:url(/assets/images/button-menu-long-small.png) 0 0 transparent;
+  }
+
+  #nav a {
+    font-size:12px;
+  }
+
+  #nav ul {
+    width:234px;
+  }
+
+  #nav ul li a {
+    padding:5px 10px;
+  }
+
+  #nav li ul {
+    margin:24.4px 0 0;
+    width:200px;
+  }
+
+  #nav li ul a {
+    width:180px;
+  }
 }
 
-.tools-element2, .tools-element3, .tools-element4 {
-    border-left: 2px solid #292929;
-    padding-left: 7px;
-    padding-right: 7px;
-}
-
-.tools-element1 {
-    padding-right: 5px;
-}
-
-.tools-element4 a {
-    margin-right:2px;
-}
-
-input.search-box[type="text"] {
-    width:145px;
-    background-color:#161616;
-    border: 1px solid #242424;
-    color:#4d4d4d;
-    height: 14px;
-    margin-top: 10px;
-    font-size: 11px;
-}
-
-input.search-button[type="submit"] {
-  background: url(/assets/images/button-normal-720-480.png) 0 0 transparent;
-  width: 55px;
-  height: 18px;
-  margin-right: 10px;
-}
-
-input.search-button:hover[type="submit"] {
-  background: url(/assets/images/button-hover-720-480.png) no-repeat 0 0 transparent;
-  width: 55px;
-  height: 18px;
-}
-
-input.search-button[type="submit"]:disabled, input.search-button:hover[type="submit"]:disabled {
-  background: url(/assets/images/button-disabled-720-480.png) 0 0 transparent;
-  width: 55px;
-  height: 18px;
-}
-
-.search-button {
-   font-size:10px;
-}
-
-.dropdown-content, .dropdown-content a {
-    font-size:12px !important;
-}
-
-.logo-splash {
-  padding-top: 120px;
-  padding-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  text-align: center;
-  width: 100%;
-}
- }
-
-
+/* Most of the Smartphones, Mobiles (Portrait) / Screen = 480px */
 @media print, screen and (max-width: 480px) {
-  body {
-    padding: 0;
-    font:10px;
-    margin: 0;
+
+	input.search-box[type="text"] {
+		width:150px;
+		height:14px;
+		font-size:10.5px;
+	}
+
+  input.search-button:hover[type="submit"] {
+  background:transparent;
+  color:#8f0000;
+  -webkit-tap-highlight-color:rgb(0, 0, 0);
   }
-
-
-.search-div {
-    text-align: right;
-    padding: 15px 15px 0 0;
-    margin: 0;    
 }
 
-.dropbtn {
-    background: url(/assets/images/button-normal-720-480.png) no-repeat 0 0 transparent;
-    width: 55px;
-    height: 18px;
-    font-size:11px;
-}
+/* Screen = 375px */
+@media print, screen and (max-width: 375px) {
 
-.dropdown:hover .dropbtn {
-    background: url(/assets/images/button-hover-720-480.png) no-repeat 0 0 transparent;
-    width: 55px;
-    height: 18px;
-}
-
-.tools-element1 a, .tools-element2 a, .tools-element3 a, .tools-element4 a {
-    font-size: 12px;
-    padding: 0;
-    margin: 0;
-}
-
-.tools-element1 {
-    padding-left: 0;
-}
-
-.logo-splash {
-  padding-top: 120;
-  padding-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  text-align: center;
-  width: 100%;
-}
+  .search-div {
+    display:none !important;
   }
-
-@media print, screen and (max-width: 370px) {
-
-.search-div {
-  display:none !important;   
 }
- }
