--- a/assets/tipuesearch/css/tipuesearch.css
+++ b/assets/tipuesearch/css/tipuesearch.css
@@ -6,9 +6,7 @@ Tipue Search is released under the MIT License
 http://www.tipue.com/search
 */
 
-
 /* search box */
-
 
 .tools-buttons
 {
@@ -18,24 +16,22 @@ http://www.tipue.com/search
 
 .tools-header
 {
-    padding-top: 60px;
+    padding-top:0;
+    margin-top:-40px;
     text-align: left;
 }
 
 #tipue_search_input
 {
-     background-color: #161616;
-     color: #e1e1e1;
-     max-width: 210px;
- 
-	
-	border: 1px solid #242424;
-	border-radius: 0;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-     box-shadow: none; 
-	outline: 0;
-	margin: 0;
+  width:190px;
+  background-color:#cccccc;
+  border:1px solid #bababa;
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  font-size:11.5px;
+  color:#000000;
+  height:20px;
+  margin:10px 0 0 0;
 }
 
 .tipue_search_left
@@ -226,3 +222,20 @@ http://www.tipue.com/search
      }
 }
 
+@media print, screen and (max-width: 1024px) {
+
+  #tipue_search_input {
+    width:170px;
+    height:17.25px;
+    font-size:10.5px;
+  }
+}
+
+@media print, screen and (max-width: 480px) {
+
+  #tipue_search_input {
+	  width:150px;
+	 height:14px;
+	 font-size:10.5px;
+  }
+}
