--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -1,130 +1,130 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>{{ page.title }}</title>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' opingsoc.com; script-src 'self' 'unsafe-inline' code.jquery.com github.com/opingsoc opingsoc.com; img-src 'self' opingsoc.weebly.com opingsoc.com;">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <script type="text/javascript">
-        var host = "opingsoc.com";
-        if ((host == window.location.host) && (window.location.protocol != "https:"))
+<!DOCTYPE html>
+                <html><html lang="en">
+                  <head>
+     <script type="text/javascript">
+    var host = "opingsoc.com";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
     </script>
-    {% capture lchar %}{{page.url | slice: -1, 1}}{% endcapture %}
-    {% capture url %}{% if lchar == "/" %}{{page.url}}index.html{% else %}{{ page.url | default: 'index.html' }}{% endif %}{% endcapture %}
-    <!-- load jQuery 3.2.1 -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-			  crossorigin="anonymous">
-    </script>
-  <!-- load jQuery 1.6.2 -->
-    <script
-			  src="https://code.jquery.com/jquery-1.6.2.min.js"
-			  integrity="sha256-0W0HoDU0BfzslffvxQomIbx0Jfml6IlQeDlvsNxGDE8="
-			  crossorigin="anonymous">
-    </script>
-    <script type="text/javascript">
-      var jQuery_1_6_2 = $.noConflict(true);
-    </script>
-    <link rel="stylesheet" href="{{ '/assets/css/style-light.css?v=' | append: site.github.build_revision | relative_url }}" title="style-light">
-    <script src="{{ '/assets/js/wiki-features.js' | relative_url }}"></script>
-    <link rel="stylesheet" href="assets/tipuesearch/css/normalize.css">
-    <link rel="stylesheet" href="assets/tipuesearch/css/tipuesearch.css">
-    <script type="text/javascript" src="assets/tipuesearch/tipuesearch_set.js"></script>
-    <script type="text/javascript" src="assets/tipuesearch/tipuesearch_content.js"></script>
-    <script type="text/javascript" src="assets/tipuesearch/tipuesearch.min.js"></script>
-    <script type="text/javascript">
-        window.onload = function() {
-        if(/iP(hone|ad)/.test(window.navigator.userAgent)) {
-        var elements = document.querySelectorAll('button');
-        var emptyFunction = function() {};
-        for(var i = 0; i < elements.length; i++) {
-        elements[i].addEventListener('touchstart', emptyFunction, false);
-          }
-        }
-      };
-    </script>
-  <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-</head>
-<body ondragstart="return false;" ondrop="return false;">
-    <link rel="preload" href="/assets/images/button-normal.png" as="image">
-    <link rel="preload" href="/assets/images/button-hover.png" as="image">
-    <link rel="preload" href="/assets/images/button-hover-red.png" as="image">
-    <link rel="preload" href="/assets/images/button-menu-long-white.png" as="image">
-    <link rel="preload" href="/assets/images/button-white-normal.png" as="image">
-    <link rel="preload" href="/assets/images/overlay.png" as="image">
-    <div id="nav">
-    <ul> 
-      <li><a href="#">Home</a>
-        <ul> 
-          <li><a href="/index.html">Home Page</a></li> 
-        </ul>
-      </li>
-      <li><a href="#">Research</a> 
-        <ul> 
-          <li>{% for p in site.pages %}
-              {% if p.menu == "research" %}
-              <a href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
-              {% endif %}
-              {% endfor %}</li> 
-        </ul> 
-      </li> 
-      <li><a href="#">Wiki</a> 
-        <ul> 
-          <li>{% for p in site.pages %}
-              {% if p.menu == "wiki" %}
-              <a href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
-              {% endif %}
-              {% endfor %}</li> 
-        </ul> 
-      </li>
-      <li><a href="#">News</a> 
-      </li> 
-    </ul> 
-    </div>
-    <br>
-    <div class="search-div" style="padding-top:65px"></div>
-<div class="wrapper">
-<header>
-    <div class="logo-center" style="text-align:center;"><img src="/assets/images/sidebar-logo-black1.png"></div>
-    {% if site.custom_sidebar %}
-    {% include sidebar.html %}
-    {% endif %}    
-</header>
-    <div class="scroll-top-wrapper">Top
-      <span class="scroll-top-inner">
-      </span>
-    </div>
-<section>
-    <div class="tools-header">
-      <h2>Search Results</h2>
-    </div>
-    <div class="block" style="padding-top:5px">
-      <div id="tools-buttons" style="width: 100%; text-align: left">
-        <form action="https://opingsoc.com/search.html">
-          <input type="text" class="search-box" id="tipue_search_input" name="q" placeholder="Search" autocomplete="off" pattern=".{3,}" title="At least 3 characters" required="">
-          <input type="submit" class="search-button" value="Search" />
-            <div style="clear: both;"></div>
-        </form>
-      </div>
-    </div>
-    <div id="tipue_search_content" style="padding-top: 15px"></div>  
-    {{ content }}
-    <div class="footer">
-      {% if site.custom_footer %}
-      {% include footer.html %}
-      {% endif %}
-      <div class="footer-text">
-        <a href="#top">Back to Top</a>
-      </div>
-    </div>
-</section>
+  		  {% capture lchar %}{{page.url | slice: -1, 1}}{% endcapture %}
+  		  {% capture url %}{% if lchar == "/" %}{{page.url}}index.html{% else %}{{ page.url | default: 'index.html' }}{% endif %}{% endcapture %}
+                    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+                    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+                    <title>Search Results</title>
+                    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+			  crossorigin="anonymous"></script>
+                    <link rel="stylesheet" 
+                          href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" 
+                          title="default">
+                     <script src="{{ '/assets/js/wiki-features.js' | relative_url }}"></script>
+                    
+                    <link rel="stylesheet" href="assets/tipuesearch/css/normalize.css">
+                    <link rel="stylesheet" href="assets/tipuesearch/css/tipuesearch.css">
+                    <script type="text/javascript" src="assets/tipuesearch/tipuesearch_set.js"></script>
+                    <script type="text/javascript" src="assets/tipuesearch/tipuesearch_content.js"></script>
+                    <script type="text/javascript" src="assets/tipuesearch/tipuesearch.min.js"></script>
+
+                    <meta name="viewport" content="width=device-width">
+                    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>    <![endif]-->
+                  </head>
+
+                  <body>
+		    <link rel="preload" href="/assets/images/button-normal-720-480.png" as="image">
+  <link rel="preload" href="/assets/images/button-hover-720-480.png" as="image">
+  <link rel="preload" href="/assets/images/button-disabled-720-480.png" as="image">
+  <link rel="preload" href="/assets/images/button-normal.png" as="image">
+  <link rel="preload" href="/assets/images/button-hover.png" as="image">
+  <link rel="preload" href="/assets/images/button-disabled.png" as="image">
+                    <div class="wrapper">
+                      <header>
+         <div class="logo-center"><a href="{{ '/' | relative_url }}"><img src="{{ site.logo_url }}">
+         </a></div>
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
+
+<div class="dropdown">
+<button class="dropbtn">Menu</button>
+  <div class="dropdown-content">
+  {% for p in site.pages %}
+    {% if p.menu == "wiki" %}
+    <a href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a></li>
+    {% endif %}
+  {% endfor %}
 </div>
-    <script src="https://opingsoc.com/assets/js/scale.fix.js" integrity="sha384-1kXXzJdU0RhTpy4AR2pS7GDjVe5snWlRMZFB4ZHuQYTmIcj54r2v91UA5OemXJFp" crossorigin="anonymous"></script>
-    <script src="https://opingsoc.com/assets/js/scroll.js" integrity="sha384-THLkb2fXnEPV9urqPgldg7NME3AoAjcLeSTlLpdVLXSsoRC6iQFC1YyRDqC2E4Vl" crossorigin="anonymous"></script>
+</div>
+
+
+<div class="open-menu">
+        {% if site.custom_sidebar %}
+          {% include sidebar.html %}
+        {% endif %}
+</div>
+
+        {% if site.github.is_user_page %}
+          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
+
+        {% if site.show_downloads %}
+        {% endif %}
+        
+    
+                      </header>
+
+                      <section>
+                        <div class="search-div">
+			{{page.relative_path}}
+                          <span class="tools-element1"><a href="/wiki/Home.html">Home</a></span>
+          		  <span class="tools-element2"><a href="">Research</a></span>
+         		  <span class="tools-element3"><a href="">Wiki</a></span>
+        		  <span class="tools-element4"><a href="">News</a></span>
+                        </div>
+                        <div id="toc"></div>
+
+                      <div class="tools-header">
+                          <h2>Search Results</h2>
+                        </div>
+
+                        <div class="block" style="padding-top: 31px">
+                          <div id="tools-buttons" style="width: 100%; text-align: left">
+                            <form action="search.html">
+
+							<input type="text" class="search-box" id="tipue_search_input" name="q" placeholder="Search" autocomplete="off" pattern=".{3,}" title="At least 3 characters"
+                                  required="">
+ 	<input type="submit" class="search-button" value="Search" />
+
+                              
+				<div style="clear: both;"></div>
+				</form>
+				</div>
+				</div>
+                      
+                           <div id="tipue_search_content" style="padding-top: 15px"></div>  
+ 
+                       
+
+                    <!-- body -->
+                 
+</section>
+
+
+<footer>
+</footer> 
+</div> 
+
+<script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>   
+    
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#toc').toc({ title: '<i>Contents</i>'});
+        });
+    </script>
+  
+
+<script>
+$(document).ready(function() {
+     $('#tipue_search_input').tipuesearch();
+});
+</script>
+
 </body>
 </html>
