--- a/_layouts/dark.html
+++ b/_layouts/dark.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style-dark.css?v=' | append: site.github.build_revision | relative_url }}" title="style-dark">
     <script src="https://opingsoc.com/assets/js/lightbox.js" integrity="sha384-YyABfDLy17bJneFJ6kDoPBXGWX+QNuOBSgzyVt/z2eyNjZtYmpU0jpa/Yi/Ky53p" crossorigin="anonymous"></script>
     <script src="https://opingsoc.com/assets/js/wiki-features.js" integrity="sha384-gi7qIfOLHD/iBnFlW0lQt3S2qLORrAz/Ov0gk7yZYuXojyH+ggWPec28kdmkmJpa" crossorigin="anonymous"></script>
+
+    <script src="https://widget.battleforthenet.com/widget.js" integrity="sha384-qMoanfdlt4/Wv827dyFzHr+qugkaeiu2wLYmid4/ac7dY2VqN7UZmjK3K5pf/QmJ" crossorigin="anonymous" async></script>
+
     <script type="text/javascript">
         window.onload = function() {
         if(/iP(hone|ad)/.test(window.navigator.userAgent)) {
@@ -92,9 +95,15 @@
 <div class="wrapper">
 <header>
     <div class="logo-center" style="text-align:center;"><img src="/assets/images/sidebar-logo-white1-dim.png"></div>
-    {% if site.custom_sidebar %}
+        {% if site.custom_sidebar %}
     {% include sidebar.html %}
-    {% endif %}    
+    {% endif %} 
+    
+        <div class="neutrality"><a href="https://www.battleforthenet.com/#bftn-action-form"><img src="/assets/images/save-net-neutrality.png"></a>
+          <a href="https://www.battleforthenet.com/">battleforthenet.com</a><br>  
+          <a href="https://www.savetheinternet.com/net-neutrality">savetheinternet.com/net-neutrality</a>
+        </div>
+  
 </header>
     <div class="scroll-top-wrapper ">Top
       <span class="scroll-top-inner">
