--- a/_layouts/dark.html
+++ b/_layouts/dark.html
@@ -62,7 +62,7 @@
         <ul> 
           <li><a href="/index.html">Home Page</a></li> 
         </ul>
-      </li>
+      </li> 
       <li><a href="#">Research</a> 
         <ul> 
           <li>{% for p in site.pages %}
@@ -98,14 +98,12 @@
         {% if site.custom_sidebar %}
     {% include sidebar.html %}
     {% endif %} 
-    
-        <div class="neutrality"><a href="https://www.battleforthenet.com/#bftn-action-form"><img src="/assets/images/save-net-neutrality.png"></a>
-          <a href="https://www.battleforthenet.com/">battleforthenet.com</a><br>  
-          <a href="https://www.savetheinternet.com/net-neutrality">savetheinternet.com/net-neutrality</a>
-        </div>
-  
+    <div class="neutrality"><img src="/assets/images/save-net-neutrality.png">
+        <a href="https://www.battleforthenet.com/">battleforthenet.com</a><br>  
+        <a href="https://www.savetheinternet.com/net-neutrality">savetheinternet.com/net-neutrality</a>
+    </div>
 </header>
-    <div class="scroll-top-wrapper ">Top
+    <div class="scroll-top-wrapper">Top
       <span class="scroll-top-inner">
       </span>
     </div>
