--- a/_sass/style-dark.scss
+++ b/_sass/style-dark.scss
@@ -1018,6 +1018,11 @@ input.search-button:hover[type="submit"] {
     display:none;
   }
 
+	.neutrality {
+		display:none;
+		visibility:hidden;
+	}
+
   h1 {
     margin:30px 0 20px 0;
     line-height:1.5;
