--- a/_sass/style-dark.scss
+++ b/_sass/style-dark.scss
@@ -865,9 +865,7 @@ input.search-button:hover[type="submit"] {
   color:#ffffff;
   text-shadow:0 1px 0 rgba(255, 255, 255, 0.2), 0 -1px #000;
     -webkit-text-shadow:0 1px 0 rgba(255, 255, 255, 0.2), 0 -1px #000;
-  border-top-color:#3b1412;
-  border-left-color:#3b1412;
-  border-right-color:#3b1412;
+  border-color:#3b1412;
   width:75px;
   height:25px;
      -webkit-tap-highlight-color:rgb(0, 0, 0);
