--- a/_sass/style-light.scss
+++ b/_sass/style-light.scss
@@ -766,6 +766,7 @@ input.search-button:hover[type="submit"] {
   color:#ffffff;
   text-shadow:0 1px 0 rgba(255, 255, 255, 0.2), 0 -1px #000;
     -webkit-text-shadow:0 1px 0 rgba(255, 255, 255, 0.2), 0 -1px #000;
+	border-color:#3b1412;
   width:75px;
   height:25px;
      -webkit-tap-highlight-color:rgb(0, 0, 0);
