--- a/_sass/style-light.scss
+++ b/_sass/style-light.scss
@@ -232,8 +232,6 @@ section > p:before {
   background:rgba(0, 0, 0, 0) -webkit-linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
 	background:rgba(0, 0, 0, 0) -o-linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
   background:rgba(0, 0, 0, 0) linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
-  border-bottom:1px solid rgba(0, 0, 0, 0.6);
-  border-top:1px solid #8f0000;
   color:#ffffff;
 }
 
@@ -243,7 +241,6 @@ section > p:before {
   background:rgb(60, 64, 66) -webkit-linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
 	background:rgb(60, 64, 66) -o-linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
   background:rgb(60, 64, 66) linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
-  border:1px solid rgba(0, 0, 0, 0.5);
   border-radius:0 0 10px 10px;
     -webkit-border-radius:0 0 10px 10px;
   box-shadow: inset 0 0 15px 0 rgba(0,0,0,0.4);
@@ -253,10 +250,10 @@ section > p:before {
   position:absolute;
   width:250px;
   z-index:9998;
-  opacity:0.94;
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=94)";
-    filter: alpha(opacity=94);
-    -moz-opacity:0.94;
+  opacity:0.92;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=92)";
+    filter: alpha(opacity=92);
+    -moz-opacity:0.92;
 }
 
 #nav li ul li ul {
@@ -273,10 +270,7 @@ section > p:before {
 
 #nav li ul a {
   background:rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border-color:transparent currentColor;
-  border-image:none;
-  border-style:solid none;
-  border-width:1px;
+  border-width:0;
   box-shadow:none;
   margin-right:0;
   width:210px;
