--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -31,9 +31,9 @@
       var jQuery_1_6_2 = $.noConflict(true);
     </script>
     <link rel="stylesheet" href="{{ '/assets/css/style-search.css?v=' | append: site.github.build_revision | relative_url }}" title="style-search">
-    <script type="text/javascript" src="assets/tipuesearch/tipuesearch_set.js"></script>
-    <script type="text/javascript" src="assets/tipuesearch/tipuesearch_content.js"></script>
-    <script type="text/javascript" src="assets/tipuesearch/tipuesearch.min.js"></script>
+    <script src="https://opingsoc.com/assets/js/tipuesearch_set.js" integrity="sha384-1e0dD66A9J89kmsfdBUx7YM6YlcW/XZDuS/38gH4BusPWyIYCb9tIOE/axFYHj6e" crossorigin="anonymous"></script>
+    <script src="https://opingsoc.com/assets/js/tipuesearch_content.js" integrity="sha384-/26YcK73In/jaatyCWWZRNLu/AXiNb5q10j8H/BQpPL2gWQHBucyWA4iCGIzCybu" crossorigin="anonymous"></script>
+    <script src="https://opingsoc.com/assets/js/tipuesearch.min.js" integrity="sha384-y1gsnp1D5vuAic9himN/BwBdEtUNtNgVd1mcd2nwn8+6vascuEGAe6mYTfNhP2vj" crossorigin="anonymous"></script>
     <script type="text/javascript">
         window.onload = function() {
         if(/iP(hone|ad)/.test(window.navigator.userAgent)) {
